--- a/Registry/View/EditPerson/EditPersonDataUserControl.xaml
+++ b/Registry/View/EditPerson/EditPersonDataUserControl.xaml
@@ -50,7 +50,6 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5"  FontWeight="Bold">Личные данные</Label>
@@ -68,7 +67,7 @@
 
         <Label Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="5"  FontWeight="Bold">Удостоверение личности</Label>
         <ScrollViewer Grid.Row="14" Grid.Column="0" Grid.ColumnSpan="5" Height="72" Margin="1"  VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-        <TextBox HorizontalAlignment="Stretch" IsReadOnly="True" Text="{Binding IdentityDocuments}" MouseDoubleClick="{mvvm:EventBinding EditPersonIdentityDocumentsCommand}"/>
+            <TextBox HorizontalAlignment="Stretch" IsReadOnly="True" Text="{Binding IdentityDocuments}" MouseDoubleClick="{mvvm:EventBinding EditPersonIdentityDocumentsCommand}"/>
         </ScrollViewer>
 
         <Label Grid.Row="15" Grid.Column="0" Grid.ColumnSpan="5"  FontWeight="Bold">Инвалидость</Label>
@@ -82,16 +81,13 @@
         </ScrollViewer>
 
         <Label Grid.Row="19" Grid.Column="0" FontWeight="Bold">Группа здоровья</Label>
-        <ComboBox Grid.Row="19" Grid.Column="1" Grid.ColumnSpan="2" Margin="1" HorizontalAlignment="Stretch" ItemsSource="{Binding HealthGroups}" DisplayMemberPath="Name" SelectedValuePath="Id" SelectedValue="{Binding HealthGroupId}" />
+        <ComboBox Grid.Row="19" Grid.Column="1" Grid.ColumnSpan="2" Margin="1" HorizontalAlignment="Stretch" ItemsSource="{Binding HealthGroups}" DisplayMemberPath="Name" SelectedValuePath="Id" 
+                  SelectedValue="{Binding HealthGroupId, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" IsEnabled="{Binding IsChild}"/>
 
         <Label Grid.Row="20" Grid.Column="0" FontWeight="Bold">Гражданство</Label>
-        <ComboBox Grid.Row="20" Grid.Column="1" Grid.ColumnSpan="2" Margin="1" HorizontalAlignment="Stretch" ItemsSource="{Binding Countries}" DisplayMemberPath="Name" SelectedValuePath="Id" SelectedValue="{Binding NationalityId}"/>
+        <ComboBox Grid.Row="20" Grid.Column="1" Grid.ColumnSpan="2" Margin="1" HorizontalAlignment="Stretch" ItemsSource="{Binding Countries}" DisplayMemberPath="Name" SelectedValuePath="Id" 
+                  SelectedValue="{Binding NationalityId,  ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{DynamicResource ValidationTemplate}"/>
 
         <TextBlock Grid.Row="21" Grid.Column="0" Grid.ColumnSpan="3" Text="{Binding TextMessage}"/>
-        <StackPanel  Grid.Row="22" Grid.Column="3" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Width="auto">
-            <Button Margin="3"  Height="24" Padding="3" Content="Сохранить" Command="{Binding SaveChangesCommand}"/>
-            <Button Margin="3"  Height="24" Padding="3" Content="Отмена" />
-        </StackPanel>
-
     </Grid>
 </UserControl>
