--- a/StuffLib/View/WebcamDevice.xaml
+++ b/StuffLib/View/WebcamDevice.xaml
@@ -6,10 +6,11 @@
              xmlns:controls="clr-namespace:AForge.Controls;assembly=AForge.Controls"
              mc:Ignorable="d"
              d:DesignHeight="300"
-             d:DesignWidth="300">
+             d:DesignWidth="300"
+             Loaded="WebcamDeviceOnLoaded"
+             Unloaded="WebcamDeviceOnUnloaded">
     <Grid>
-        <Grid x:Name="NoVideoSourceGrid"
-              Margin="10">
+        <Grid x:Name="NoVideoSourceGrid">
             <Border BorderBrush="DimGray"
                     BorderThickness="1">
                 <TextBlock x:Name="NoVideoSourceMessage"
@@ -21,7 +22,6 @@
             </Border>
         </Grid>
         <WindowsFormsHost x:Name="VideoSourceWindowsFormsHost"
-                          Margin="10"
                           Background="Transparent">
             <controls:VideoSourcePlayer x:Name="VideoSourcePlayer" />
         </WindowsFormsHost>
