--- a/MainLib/View/EditPersonCommonDataView.xaml
+++ b/MainLib/View/EditPersonCommonDataView.xaml
@@ -38,11 +38,13 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Border Grid.Column="0" Grid.Row="1" Grid.RowSpan="6" BorderBrush="Black" BorderThickness="1" Margin="2" VerticalAlignment="Stretch" Padding="3" Width="120">
+        <Border Grid.Column="0" Grid.Row="1" Grid.RowSpan="6" BorderBrush="Black" BorderThickness="1" Margin="2" VerticalAlignment="Stretch" Width="120" Height="160">
+            <Button Command="{Binding TakePhotoCommand}">
             <StackPanel VerticalAlignment="Stretch">
                 <Image Source="{Binding PhotoURI}" VerticalAlignment="Stretch" HorizontalAlignment="Center"/>
                 <TextBlock VerticalAlignment="Bottom" TextWrapping="Wrap" TextAlignment="Center">Нажмите, чтобы сделать фото</TextBlock>
             </StackPanel>
+            </Button>
         </Border>
         <TextBlock Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Height="16" Margin="0,2">Фамилия</TextBlock>
         <TextBox Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3" Margin="1" HorizontalAlignment="Stretch" Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}" />
