--- a/StuffLib/View/PhotoView.xaml
+++ b/StuffLib/View/PhotoView.xaml
@@ -1,60 +1,50 @@
-﻿<UserControl x:Class="Core.View.PhotoView"
+﻿<ResourceDictionary x:Class="Core.View.PhotoView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:stuffLib="clr-namespace:StuffLib"
              xmlns:video="clr-namespace:Video"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <TextBlock Grid.Column="0"
-            Grid.Row="0"
-            Text="Select Video Device Source: "
-            Margin="20" />
-        <ComboBox Grid.Column="1"
-            Grid.Row="0"
+             xmlns:cmdBehavior="clr-namespace:CmdBehavior"
+             mc:Ignorable="d">
+    <DataTemplate  DataType="{x:Type stuffLib:PhotoViewModel}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Column="0" Grid.Row="0" Text="Выберите камеру: " Margin="20" />
+            <ComboBox Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2"
             ItemsSource="{Binding MediaDeviceList}"
             DisplayMemberPath="DisplayName"
             SelectedValuePath="UsbId"
             SelectedValue="{Binding SelectedVideoDeviceId}"
-            Width="200"
-            HorizontalAlignment="Left"
+            HorizontalAlignment="Stretch"
             VerticalAlignment="Center"
-            Margin="0,20,20,20" />
-        <TextBlock Grid.Column="0"
-            Grid.Row="1"
-            Text="Selected Device Preview:"
-            Margin="20,20,20,5" />
-        <video:WebcamDevice Grid.Row="2"
-                    HorizontalAlignment="Left"
+            Margin="2" />
+            <video:WebcamDevice Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2" Margin="2,2,20,2"
+                    HorizontalAlignment="Center"
                     VerticalAlignment="Top"
-                    Grid.Column="0"
-                    Grid.ColumnSpan="2"
-                    Margin="20,0,20,20"
                     x:Name="CameraVideoDeviceControl"
                     VideoPreviewWidth="{Binding VideoPreviewWidth}"
                     VideoPreviewHeight="{Binding VideoPreviewHeight}"
                     VideoSourceId="{Binding SelectedVideoDeviceId}"
                     SnapshotBitmap="{Binding SnapshotBitmap, Mode=TwoWay}" />
-        <Button Grid.Row="3"
-        Margin="20,20,20,5"
-        Grid.Column="0"
-        Content="Take Snapshot">
-            <!--<cmdBehavior:CommandBehaviorCollection.Behaviors>
-                <cmdBehavior:BehaviorBinding Event="Click"
-                                        Command="{Binding TakeSnapshot, ElementName=CameraVideoDeviceControl}" />
-                <cmdBehavior:BehaviorBinding Event="Click"
-                                        Command="{Binding SnapshotCommand}" />
-            </cmdBehavior:CommandBehaviorCollection.Behaviors>-->
-        </Button>
-        <Image Source="{Binding SnapshotTaken}"
-            HorizontalAlignment="Left"
-            Grid.Row="4"
-            Grid.Column="0"
-            Grid.ColumnSpan="2"
-            VerticalAlignment="Top"
-            Width="320"
-            Height="240"
-            Margin="20,0,20,20" />
-    </Grid>
-</UserControl>
+            <Button Grid.Row="1" Margin="2" Grid.Column="2" Content="Сделать фото" Width="auto" Command="{Binding SnapshotCommand}">
+                <cmdBehavior:CommandBehaviorCollection.Behaviors>
+                    <cmdBehavior:BehaviorBinding Event="Click"
+                                             Command="{Binding TakeSnapshot, ElementName=CameraVideoDeviceControl}" />
+                    <cmdBehavior:BehaviorBinding Event="Click"
+                                             Command="{Binding SnapshotCommand}" />
+                </cmdBehavior:CommandBehaviorCollection.Behaviors>
+            </Button>
+            <Image Source="{Binding SnapshotTaken}" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="2" VerticalAlignment="Top" Width="120" Height="160" Margin="2" />
+        </Grid>
+    </DataTemplate>
+</ResourceDictionary>
