--- a/MainLib/View/DialogWindow.xaml
+++ b/MainLib/View/DialogWindow.xaml
@@ -1,9 +1,10 @@
 ﻿<Window x:Class="Core.DialogWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:system="clr-namespace:System;assembly=mscorlib"
+        xmlns:core="clr-namespace:Core;assembly=StuffLib"
         mc:Ignorable="d"
         Title="{Binding Title}" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen"
         d:DataContext="{d:DesignData IDialogViewModel}" ResizeMode="CanMinimize">
@@ -18,15 +19,11 @@
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <ContentControl Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Content="{Binding}"/>
-        <Button Grid.Row="1" Grid.Column="1" Margin="5" Height="25" MinWidth="120" Content="{Binding ConfirmButtonText}" Command="{Binding CloseCommand}" IsDefault="True">
-            <Button.CommandParameter>
-                <system:Boolean>True</system:Boolean>
-            </Button.CommandParameter>
+        <Button Grid.Row="1" Grid.Column="1" Margin="5" Height="25" MinWidth="120" Content="{Binding ConfirmButtonText}" Command="{Binding CloseCommand}" IsDefault="True"
+                CommandParameter="{core:NullableBoolean True}">
         </Button>
-        <Button Grid.Row="1" Grid.Column="2" Margin="5" Height="25" MinWidth="120" Content="{Binding CancelButtonText}" Command="{Binding CloseCommand}" IsCancel="True">
-            <Button.CommandParameter>
-                <system:Boolean>False</system:Boolean>
-            </Button.CommandParameter>
+        <Button Grid.Row="1" Grid.Column="2" Margin="5" Height="25" MinWidth="120" Content="{Binding CancelButtonText}" Command="{Binding CloseCommand}" IsCancel="True"
+                CommandParameter="{core:Convert False, {x:Type system:Boolean}}">
         </Button>
     </Grid>
 </Window>
