--- a/Commission/View/Working/CommissionDecisionControl.xaml
+++ b/Commission/View/Working/CommissionDecisionControl.xaml
@@ -34,7 +34,6 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -79,29 +78,12 @@
         <Label Grid.Row="3" Grid.Column="0" Content="Предварительный запрос участников"/>
         <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Margin="5">
             <Button Content="Добавить участников" 
-                    Command="{Binding SelectMembersToPreviousStageCommand}"
+                    Command="{Binding RequestMembersCommand}"
                     IsEnabled="{Binding AllowSave}"></Button>
-            <Label Content="{Binding PreviousMembers}"></Label>
+            <Label Content="{Binding RequestedMembersLabel}" Margin="10,0"></Label>
         </StackPanel>
-        
-        <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Content="Ваше решение по комиссии" FontWeight="Bold"/>
 
-        <Label Grid.Row="5" Grid.Column="0" Margin="5" Content="Основное решение"/>
-        <ComboBox Grid.Row="5" Grid.Column="1" Margin="5" ItemsSource="{Binding MainDecisions}" DisplayMemberPath="Name" SelectedItem="{Binding SelectedMainDecision}"/>
-
-        <Label Grid.Row="6" Grid.Column="0" Margin="5,0" Content="Уточнение решения"/>
-        <ComboBox Grid.Row="6" Grid.Column="1" Margin="5,0" ItemsSource="{Binding SpecificDecisions}" DisplayMemberPath="Name" SelectedItem="{Binding SelectedSpecificDecision}"/>
-
-        <Label Grid.Row="7" Grid.Column="0" Margin="5" Content="Рекоммендации (ваш комментарий к решению)"/>
-        <TextBox Grid.Row="7" Grid.Column="1" Height="50" Margin="5" Text="{Binding Comment, UpdateSourceTrigger=PropertyChanged}"></TextBox>
-       
-        <Button Grid.Row="8" Grid.Column="1" Margin="5" IsEnabled="{Binding AllowSave}"
-                Command="{Binding SaveDecisionCommand}"
-                CommandParameter="{Binding ElementName=decisions, Path=SelectedItem}"
-                Content="Сохранить (принять) решение" HorizontalAlignment="Left">
-        </Button>
-
-        <Border Grid.Row="9" Grid.ColumnSpan="2" BorderBrush="Gray" BorderThickness="1,0,1,1" Margin="0,10">
+        <Border Grid.Row="4" Grid.ColumnSpan="2" BorderBrush="Gray" BorderThickness="1,0,1,1" Margin="0,10">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                     <GradientStop Color="#33000000" Offset="0" />
@@ -110,12 +92,22 @@
             </Border.Background>
         </Border>
         
-        <Label Grid.Row="10" Grid.Column="0" Content="Последующий запрос участников"/>
-        <StackPanel Grid.Row="10" Grid.Column="1" Orientation="Horizontal" Margin="5">
-            <Button Content="Добавить участников" 
-                    Command="{Binding SelectMembersToNextStageCommand}" 
-                    IsEnabled="{Binding AllowSave}"></Button>
-            <Label Content="{Binding NextMembers}"></Label>
-        </StackPanel>
+        <Label Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Content="Ваше решение по комиссии" FontWeight="Bold"/>
+
+        <Label Grid.Row="6" Grid.Column="0" Margin="5" Content="Основное решение"/>
+        <ComboBox Grid.Row="6" Grid.Column="1" Margin="5" ItemsSource="{Binding MainDecisions}" DisplayMemberPath="Name" SelectedItem="{Binding SelectedMainDecision}"/>
+
+        <Label Grid.Row="7" Grid.Column="0" Margin="5,0" Content="Уточнение решения"/>
+        <ComboBox Grid.Row="7" Grid.Column="1" Margin="5,0" ItemsSource="{Binding SpecificDecisions}" DisplayMemberPath="Name" SelectedItem="{Binding SelectedSpecificDecision}"/>
+
+       <Label Grid.Row="8" Grid.Column="0" Margin="5" Content="Рекоммендации (ваш комментарий к решению)"/>
+        <TextBox Grid.Row="8" Grid.Column="1" Height="50" Margin="5" Text="{Binding Comment, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+       
+        <Button Grid.Row="9" Grid.Column="1" Margin="5" IsEnabled="{Binding AllowSave}"
+                Command="{Binding SaveDecisionCommand}"
+                CommandParameter="{Binding ElementName=decisions, Path=SelectedItem}"
+                Content="Сохранить (принять) решение" HorizontalAlignment="Left">
+        </Button>
+        
     </Grid>
 </UserControl>
