--- a/Registry/App.xaml
+++ b/Registry/App.xaml
@@ -5,23 +5,23 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/StuffLib;component/View/PhotoView.xaml" />
-                <ResourceDictionary Source="View/PersonView.xaml" />
+                <ResourceDictionary Source="View/Patient List/PersonView.xaml" />
+                <ResourceDictionary Source="View/Patient List/PatientAssignmentListView.xaml" />
                 <ResourceDictionary Source="View/EditPerson/PersonAddressesView.xaml" />
                 <ResourceDictionary Source="View/EditPerson/PersonIdentityDocumentsView.xaml" />
                 <ResourceDictionary Source="View/EditPerson/PersonInsuranceDocumentsView.xaml" />
                 <ResourceDictionary Source="View/EditPerson/PersonDisabilitiesView.xaml" />
                 <ResourceDictionary Source="View/EditPerson/PersonSocialStatusesView.xaml" />
-                <ResourceDictionary Source="View/PatientAssignmentListView.xaml" />
-                <ResourceDictionary Source="View/ScheduleView.xaml" />
-                <ResourceDictionary Source="View/TimeTickerView.xaml" />
-                <ResourceDictionary Source="View/RoomView.xaml" />
-                <ResourceDictionary Source="View/FreeTimeSlotView.xaml" />
-                <ResourceDictionary Source="View/OccupiedTimeSlotView.xaml" />
-                <ResourceDictionary Source="View/ScheduleAssignmentUpdateView.xaml" />
-                <ResourceDictionary Source="View/ScheduleEditorView.xaml" />
-                <ResourceDictionary Source="View/ScheduleEditorRoomView.xaml" />
-                <ResourceDictionary Source="View/ScheduleEditorRoomDayView.xaml" />
-                <ResourceDictionary Source="View/ScheduleEditorEditDayView.xaml" />
+                <ResourceDictionary Source="View/Schedule/ScheduleView.xaml" />
+                <ResourceDictionary Source="View/Schedule/TimeTickerView.xaml" />
+                <ResourceDictionary Source="View/Schedule/RoomView.xaml" />
+                <ResourceDictionary Source="View/Schedule/FreeTimeSlotView.xaml" />
+                <ResourceDictionary Source="View/Schedule/OccupiedTimeSlotView.xaml" />
+                <ResourceDictionary Source="View/Schedule Editor/ScheduleAssignmentUpdateView.xaml" />
+                <ResourceDictionary Source="View/Schedule Editor/ScheduleEditorView.xaml" />
+                <ResourceDictionary Source="View/Schedule Editor/ScheduleEditorRoomView.xaml" />
+                <ResourceDictionary Source="View/Schedule Editor/ScheduleEditorRoomDayView.xaml" />
+                <ResourceDictionary Source="View/Schedule Editor/ScheduleEditorEditDayView.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <ControlTemplate x:Key="ValidationTemplate">
                 <Grid>
