Intermediate commit with saving
Person,
PersonInsuranceDocuments,
personAddresses,
personIdentityDocuments,
personDisabilities,
personSocialStatuses

--- a/MainLib/View/EditPersonCommonDataView.xaml
+++ b/MainLib/View/EditPersonCommonDataView.xaml
@@ -37,8 +37,9 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Border Grid.Column="0" Grid.Row="1" Grid.RowSpan="6" BorderBrush="Black" BorderThickness="1" Margin="2" VerticalAlignment="Stretch" Width="120" Height="160">
+        <Border Grid.Column="0" Grid.Row="1" Grid.RowSpan="7" BorderBrush="Black" BorderThickness="1" Margin="2" VerticalAlignment="Stretch" Width="120" Height="160">
             <Button Command="{Binding TakePhotoCommand}">
             <StackPanel VerticalAlignment="Stretch">
                 <Image Source="{Binding PhotoURI}" VerticalAlignment="Stretch" HorizontalAlignment="Center"/>
@@ -56,25 +57,29 @@
         <TextBox Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="3" Margin="1" HorizontalAlignment="Stretch"  Text="{Binding MiddleName, UpdateSourceTrigger=PropertyChanged}"/>
 
         <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" Height="16" Margin="0,5" Visibility="{Binding IsFIOChanged, Converter={StaticResource booleanToInversedVisibilityConverter}}">Причина смены ФИО</TextBlock>
-        <ComboBox Grid.Row="4" Grid.Column="2" Margin="1" HorizontalAlignment="Stretch" ItemsSource="{Binding ChangeNameReasons}" DisplayMemberPath="Name" SelectedItem="{Binding SelectedChangeNameReason}"
-                  Visibility="{Binding IsFIOChanged, Converter={StaticResource booleanToInversedVisibilityConverter}}"/>
+        <ComboBox Grid.Row="4" Grid.Column="2" Margin="1" HorizontalAlignment="Stretch" ItemsSource="{Binding ChangeNameReasons}" DisplayMemberPath="Name" SelectedItem="{Binding SelectedChangeNameReason, ValidatesOnDataErrors=True}"
+                  Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" Visibility="{Binding IsFIOChanged, Converter={StaticResource booleanToInversedVisibilityConverter}}"/>
         <TextBlock Grid.Row="4" Grid.Column="3" Margin="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Text="Дата"  
                    Visibility="{Binding IsSelectedChangeNameReasonWithCreateNewPersonNames, Converter={StaticResource booleanToInversedVisibilityConverter}}"/>
-        <DatePicker Grid.Row="4" Grid.Column="4" Margin="1" HorizontalAlignment="Stretch" SelectedDate="{Binding ChangeNameDate}"
+        <DatePicker Grid.Row="4" Grid.Column="4" Margin="1" HorizontalAlignment="Stretch" SelectedDate="{Binding ChangeNameDate, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{DynamicResource ValidationTemplate}"
                     Visibility="{Binding IsSelectedChangeNameReasonWithCreateNewPersonNames, Converter={StaticResource booleanToInversedVisibilityConverter}}"/>
 
-        <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" Height="16" Margin="0,5">Дата рождения</TextBlock>
+        <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" Margin="0,5">Дата рождения</TextBlock>
         <DatePicker Grid.Row="5" Grid.Column="2" Margin="1" HorizontalAlignment="Stretch" SelectedDate="{Binding BirthDate}" BorderThickness="1"/>
-        <TextBlock Grid.Row="5" Grid.Column="3" Margin="1" VerticalAlignment="Center" Height="16">Пол</TextBlock>
-        <ComboBox Grid.Row="5" Grid.Column="4" Margin="1" ItemsSource="{Binding Genders, Mode=OneTime}" DisplayMemberPath="ShortName" SelectedValuePath="Id" SelectedValue="{Binding GenderId}"/>
+        <TextBlock Grid.Row="5" Grid.Column="3" Margin="1" VerticalAlignment="Center">Пол</TextBlock>
+        <ComboBox Grid.Row="5" Grid.Column="4" Margin="1" ItemsSource="{Binding Genders, Mode=OneTime}" DisplayMemberPath="ShortName" SelectedValuePath="Id" SelectedValue="{Binding GenderId, ValidatesOnDataErrors=True}"
+                  Validation.ErrorTemplate="{DynamicResource ValidationTemplate}"/>
 
-        <TextBlock Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" Margin="0,2">Телефоны</TextBlock>
+        <TextBlock Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" Margin="0,2">Телефон</TextBlock>
         <TextBox Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="3" Margin="1" HorizontalAlignment="Stretch" Text="{Binding Phones}"/>
 
-        <TextBlock Grid.Row="7" Grid.Column="0" VerticalAlignment="Center" Margin="0,2">СНИЛС</TextBlock>
-        <TextBox Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="4" Margin="1" HorizontalAlignment="Stretch" Text="{Binding SNILS}"/>
+        <TextBlock Grid.Row="7" Grid.Column="1" VerticalAlignment="Center" Margin="0,2">Эл. почта</TextBlock>
+        <TextBox Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="3" Margin="1" HorizontalAlignment="Stretch" Text="{Binding Email}"/>
 
-        <TextBlock Grid.Row="8" Grid.Column="0" VerticalAlignment="Center" Margin="0,2">ЕНП</TextBlock>
-        <TextBox Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="4" Margin="1" HorizontalAlignment="Stretch" Text="{Binding MedNumber}"/>
+        <TextBlock Grid.Row="8" Grid.Column="0" VerticalAlignment="Center" Margin="0,2">СНИЛС</TextBlock>
+        <TextBox Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="4" Margin="1" HorizontalAlignment="Stretch" Text="{Binding SNILS}"/>
+
+        <TextBlock Grid.Row="9" Grid.Column="0" VerticalAlignment="Center" Margin="0,2">ЕНП</TextBlock>
+        <TextBox Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="4" Margin="1" HorizontalAlignment="Stretch" Text="{Binding MedNumber}"/>
     </Grid>
 </UserControl>
