--- a/AdminTools/View/MainWindow.xaml
+++ b/AdminTools/View/MainWindow.xaml
@@ -34,6 +34,9 @@
                         <Image Width="16" Height="16" Source="pack://application:,,,/Resources;component/Images/UserGroup48x48.png" />
                     </MenuItem.Icon>
                 </MenuItem>
+                <MenuItem Header="Сканировать документы" Padding="0,5,5,5" Click="{ev:EventBinding ScanDocumentsCommand}">
+                    
+                </MenuItem>
             </MenuItem>
         </Menu>
 
