--- a/Registry/View/Schedule Editor/ScheduleAssignmentUpdateView.xaml
+++ b/Registry/View/Schedule Editor/ScheduleAssignmentUpdateView.xaml
@@ -17,7 +17,7 @@
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0" Grid.Column="0" Text="Источник финансирования" Margin="5" VerticalAlignment="Center" />
             <ComboBox Grid.Row="0" Grid.Column="1" IsEditable="False" Grid.ColumnSpan="2" ItemsSource="{Binding FinacingSources, Mode=OneTime}" SelectedItem="{Binding SelectedFinancingSource, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                      DisplayMemberPath="ShortName" Margin="5"  HorizontalAlignment="Stretch" Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" x:Name="comboBox"/>
+                      DisplayMemberPath="ShortName" Margin="0 5 25 5"  HorizontalAlignment="Stretch" Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" x:Name="comboBox"/>
             <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Text="Направившее ЛПУ" Margin="5" />
             <ComboBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" IsEditable="False" ItemsSource="{Binding AssignLpuList, Mode=OneTime}" SelectedItem="{Binding SelectedAssignLpu, UpdateSourceTrigger=PropertyChanged}"
                       DisplayMemberPath="Name" Margin="5" HorizontalAlignment="Stretch" />
